docusaurus/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* cyrillic-ext */
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZJhiI2B.woff2)
    format("woff2");
  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F,
    U+FE2E-FE2F;
}
/* cyrillic */
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZthiI2B.woff2)
    format("woff2");
  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* greek-ext */
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZNhiI2B.woff2)
    format("woff2");
  unicode-range: U+1F00-1FFF;
}
/* greek */
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZxhiI2B.woff2)
    format("woff2");
  unicode-range: U+0370-03FF;
}
/* vietnamese */
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZBhiI2B.woff2)
    format("woff2");
  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1,
    U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329,
    U+1EA0-1EF9, U+20AB;
}
/* latin-ext */
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZFhiI2B.woff2)
    format("woff2");
  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
    U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2)
    format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* cyrillic-ext */
@font-face {
  font-family: "Source Code Pro";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/sourcecodepro/v22/HI_diYsKILxRpg3hIP6sJ7fM7PqPMcMnZFqUwX28DMyQtMRrTEUc.woff2)
    format("woff2");
  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F,
    U+FE2E-FE2F;
}
/* cyrillic */
@font-face {
  font-family: "Source Code Pro";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/sourcecodepro/v22/HI_diYsKILxRpg3hIP6sJ7fM7PqPMcMnZFqUwX28DMyQtM1rTEUc.woff2)
    format("woff2");
  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* greek-ext */
@font-face {
  font-family: "Source Code Pro";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/sourcecodepro/v22/HI_diYsKILxRpg3hIP6sJ7fM7PqPMcMnZFqUwX28DMyQtMVrTEUc.woff2)
    format("woff2");
  unicode-range: U+1F00-1FFF;
}
/* greek */
@font-face {
  font-family: "Source Code Pro";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/sourcecodepro/v22/HI_diYsKILxRpg3hIP6sJ7fM7PqPMcMnZFqUwX28DMyQtMprTEUc.woff2)
    format("woff2");
  unicode-range: U+0370-03FF;
}
/* vietnamese */
@font-face {
  font-family: "Source Code Pro";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/sourcecodepro/v22/HI_diYsKILxRpg3hIP6sJ7fM7PqPMcMnZFqUwX28DMyQtMZrTEUc.woff2)
    format("woff2");
  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1,
    U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329,
    U+1EA0-1EF9, U+20AB;
}
/* latin-ext */
@font-face {
  font-family: "Source Code Pro";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/sourcecodepro/v22/HI_diYsKILxRpg3hIP6sJ7fM7PqPMcMnZFqUwX28DMyQtMdrTEUc.woff2)
    format("woff2");
  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
    U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: "Source Code Pro";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/sourcecodepro/v22/HI_diYsKILxRpg3hIP6sJ7fM7PqPMcMnZFqUwX28DMyQtMlrTA.woff2)
    format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* You can override the default Infima variables here. */
:root {
  --color-plutus-white: #ffffff;
  --color-plutus-black: #1c1c1c;
  --color-plutus-green: #c2f71c;
  --color-plutus-red: #f93a36;
  --color-plutus-orange: #ff7347;
  --color-plutus-yellow: #ffbe3c;

  --color-plutus-blue-bg: #eef9fd;
  --color-plutus-blue: #4bb4d5;
  --color-plutus-blue-2: #4b6fd5;

  --color-plutus-grey-0: #fafafa;
  --color-plutus-grey-4: #f5f5f5;
  --color-plutus-grey-8: #efefef;
  --color-plutus-grey-12: #eaeaea;
  --color-plutus-grey: #e5e5e5;
  --color-plutus-grey-16: #acacac;
  --color-plutus-grey-20: #737373;
  --color-plutus-grey-24: #393939;
  --color-plutus-grey-28: #1c1c1c;

  --ifm-font-family-base: "Inter";
  --ifm-font-family-monospace: "Source Code Pro";

  --ifm-color-primary: var(--color-plutus-blue);
  --ifm-color-primary-dark: var(--color-plutus-blue);
  --ifm-color-primary-darker: var(--color-plutus-blue);
  --ifm-color-primary-darkest: var(--color-plutus-blue);

  --ifm-link-color: var(--color-plutus-blue);
  --ifm-link-hover-color: var(--color-plutus-blue-2);
  --ifm-link-hover-decoration: var(--color-plutus-blue-2);
  --ifm-menu-color-active: var(--color-plutus-grey-28);
  --ifm-navbar-link-hover-color: var(--color-plutus-grey-28);
  --ifm-breadcrumb-color-active: var(--color-plutus-grey-28);

  --ifm-navbar-search-input-placeholder-color: var(--color-plutus-grey-24);

  --ifm-color-secondary: var(--color-plutus-grey);
  --ifm-color-secondary-light: var(--color-plutus-grey-12);
  --ifm-color-secondary-dark: var(--color-plutus-grey-16);
  --ifm-color-secondary-lighter: var(--color-plutus-grey-8);
  --ifm-color-secondary-darker: var(--color-plutus-grey-20);
  --ifm-color-secondary-lightest: var(--color-plutus-grey-4);
  --ifm-color-secondary-darkest: var(--color-plutus-grey-24);
}

:root:root {
  --aa-primary-color-rgb: 75, 180, 213;
}

html[data-theme="dark"] {
  --ifm-color-primary: var(--color-plutus-blue);
  --ifm-link-color: var(--color-plutus-blue);
  --ifm-link-hover-color: var(--color-plutus-blue);
  --ifm-link-hover-decoration: var(--color-plutus-blue);
  --ifm-menu-color-active: var(--color-plutus-blue);
  --ifm-navbar-link-hover-color: var(--color-plutus-blue);
  --ifm-breadcrumb-color-active: var(--color-plutus-blue);

  --ifm-navbar-search-input-placeholder-color: var(--color-plutus-grey-8);

  --ifm-heading-color: var(--color-plutus-grey-8);
  --ifm-pre-color: var(--color-plutus-grey-4);
  --ifm-pre-background: var(--color-plutus-grey-20);
  --ifm-code-background: var(--color-plutus-grey-20);
}

html[data-theme="dark"] body {
  --aa-primary-color-rgb: 75, 180, 213;
  --aa-muted-color-rgb: 75, 180, 213;
  --aa-background-color-rgb: 0, 0, 0;
}

.markdown a {
  font-weight: bold;
}

.markdown a:hover {
  text-decoration: underline;
}

/* Header */

.navbar__logo {
  height: 20px;
  max-width: 35vw;
}

.navbar__title {
  display: none;
}

/* Cards */

.padding--lg {
  padding: 1rem !important;
}

.card h2 {
  margin-bottom: 0.25em;
}

/* Tables */

.csv-table {
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 0.75em;
}

.csv-table th {
  font-weight: bold;
}

.csv-table th,
.csv-table td {
  padding: 2px 5px;
}

.csv-table-overflow {
  overflow-x: auto;
  width: 100%;
  padding-right: 25px;
}

.csv-table-overflow-marker {
  position: relative;
}

.csv-table-overflow-marker::after {
  content: "";
  display: block;
  width: 25px;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff);
}

